--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -13,7 +13,6 @@
 </script>
 <!-- one signal -->
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
@@ -28,13 +27,15 @@
 <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
 <link rel="manifest" href="favicons/manifest.json">
-<meta name="msapplication-TileColor" content="#5271ff">
+<meta name="msapplication-TileColor" content="#007aff">
 <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
-<meta name="theme-color" content="#5271ff">
+<meta name="theme-color" content="#007aff">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Animate.css">
 <link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
 <title>Best 5g mobiles</title>
 <script src="https://kit.fontawesome.com/2738c5da23.js"></script>
 </head>
@@ -47,7 +48,7 @@
         <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
       </div>
       <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10">
+       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
         <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
         code -- 773827</p>
       </div>
@@ -60,7 +61,7 @@
 </div>
 <!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
-<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="110px"></a>
+<a class="navbar-brand" title="SMACKCART" href="index.html"><img src="SMACKCART_NEW.png" alt="SMACKCART" width="140px"></a>
 </nav>
 <!-- nav end -->
 <!--container start-->
@@ -68,32 +69,25 @@
 <div class="row">
 <div class="col-md-8">
  <!--carousel start-->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="img-fluid d-block" src="samsung-galaxy-s10-view.webp" alt="First slide">
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
+      <div class="swiper-slide"><img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt=""></div>
     </div>
-    <div class="carousel-item">
-      <img class="img-fluid d-block" src="samsung-galaxy-s10.webp" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="img-fluid d-block" src="samsung-galaxy-s10.webp" alt="Third slide">
-    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 <!--carousel end-->  
 </div>
 <div class="col-md-4">
@@ -101,8 +95,8 @@
 <p>The Samsung Galaxy S10 is the "middle child" in the Galaxy S10 trio that the company has just launched. While the Galaxy S10+ has been recognised as the best that the Galaxy S series has to offer, the smaller Galaxy S10e has also managed to gain popularity thanks to its relatively powerful hardware and reasonable price. The Galaxy S10 then is stuck in the middle, claiming to offer the best of both worlds.</p>
 <p style="font-size:20px;font-family:oswald;color:#2d2d2d;">Price: <i class="fas fa-rupee-sign"></i> 70000</p>
 <div>
-<a class="btn btn-danger btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fab fa-amazon"></i> ➝</a>
-<a class="btn btn-success btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">+ Add to cart ➝</a>
+<a class="btn btn-danger btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fas fa-bolt"></i></a>
+<a class="btn btn-success btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">+ Add to cart</a>
 </div> 
 </div>
 
@@ -117,7 +111,7 @@
 <!--buttons-->
 </div>
 </div>
-       <h4>People also viewed ➝</h4>
+     <h4>People also viewed ➝</h4>
 <div class="row" style="display: flex;flex-wrap: wrap;">
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
@@ -148,8 +142,22 @@
 <div style="margin-bottom:20px;"></div>
 <!--container end-->
 <!--scripts-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
+<script>
+    var swiper = new Swiper('.swiper-container', {
+      pagination: {
+        el: '.swiper-pagination',
+        type: 'progressbar',
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script type="text/javascript" src="bootstrap.js"></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js'></script>
 <script type="text/javascript" src="app.js"></script>
 <!--scripts end-->
 </body>
