--- a/index.html
+++ b/index.html
@@ -1,123 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<!-- one signal -->
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  var OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "06fbe16c-1192-4422-ada3-d98b84b86e44",
-    });
-  });
-</script>
-<!-- one signal -->
-	<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-<link rel="manifest" href="favicons/manifest.json">
-<meta name="msapplication-TileColor" content="#007aff">
-<meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
-<meta name="theme-color" content="#007aff">
-	<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="Animate.css">
-<link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald&display=swap&subset=latin-ext" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>ZIGBIG-amazing tech gadgets</title>
-	<script src="https://kit.fontawesome.com/2738c5da23.js"></script>
+    <meta charset="UTF-8">
+    <title>TO DO LIST APP</title>
+<!--    <link rel="icon" type="image/svg+xml" href="Image/icon1.svg">-->
+    <link rel="shortcut icon" href="Image/IconBig.png"/>
+    <script type="text/javascript" src="assets/js/lib/jQueryMin.js"></script>
+    <link rel="stylesheet" href="assets/css/todos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
 </head>
 <body>
-<!--Modal-->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
-      </div>
-      <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="">
-        <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
-        code -- 773827</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success btn-lg" data-dismiss="modal">Close</button>
-        <a class="btn btn-danger btn-lg" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Get it!</a>
-      </div>
-    </div>
-  </div>
+<div id="container">
+<h1>To-do Lists<i class="fas fa-pencil-alt"></i></h1>
+<input type="text" maxlength="28" placeholder="Enter to-dos"> 
+<ul>
+    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
+    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
+    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
+</ul> 
 </div>
-<!--nav start-->
-<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-<a class="navbar-brand" title="SMACKCART" href="index.html"><img src="SMACKCART_NEW.png" alt="SMACKCART" width="140px"></a>
- <!-- Begin Mailchimp Signup Form -->
-<!--
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<div>
-<form class="form-inline" action="https://gmail.us3.list-manage.com/subscribe/post?u=d29b024a5d0ac96da0e6b53f6&amp;id=e70b318c26" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div>
-     real people should not fill this in and expect good things - do not remove this or risk form bot signups
-    <div class="clear"><input class="myBtn" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
--->
-<!--End mc_embed_signup-->
-<!--
-  <form style="transform: translatey(-5px);" class="form-inline">
-    <a style="color:ghostwhite !important" class="btn btn-success btn-lg" href="#">Subscribe</a>
-  </form>
--->
-</nav>
-<!-- nav end -->
-<div class="container">
-<div class="row" style="display: flex;flex-wrap: wrap;">
-   <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
-   	<div id="box2" class="card">
-        <a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10"></a>
-   		<div class="card-block" style="padding: 12px;">
-   			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
-           <p>Best handpicked 5g mobiles with features..</p>
-             		<div class="text-center">
-   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
-   		</div>
-   		</div>
- 
-   	</div>
-   </div>
-   <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
-   	<div id="box2" class="card">
-        <a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10-view.webp" alt="samsung-galaxy-s10"></a>
-   		<div class="card-block" style="padding: 12px;">
-   			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
-           <p>Best handpicked 5g mobiles with features..</p>
-             		<div class="text-center">
-   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
-   		</div>
-   		</div>
- 
-   	</div>
-   </div>
-
-</div>	
-</div>
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script type="text/javascript" src="bootstrap.js"></script>
-<script type="text/javascript" src="app2.js"></script>
+<script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
 </html>
