--- a/index.html
+++ b/index.html
@@ -8,22 +8,17 @@
     <script type="text/javascript" src="assets/js/lib/jQueryMin.js"></script>
     <link rel="stylesheet" href="assets/css/todos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Hachi+Maru+Pop|Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-<div class="row">
-<div class="col-lg-6 col-centered" id="container">
+<div id="container">
 <h1>To-do Lists<i class="fas fa-pencil-alt"></i></h1>
-<input type="text" id="email" maxlength="20" placeholder="Enter to-dos">
+<input type="text" id="email" maxlength="25" placeholder="Enter to-dos"> 
 <ul>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
-</ul>
-</div>
-</div>
+</ul> 
 </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
