--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>TO DO LIST APP</title>
-<!--    <link rel="icon" type="image/svg+xml" href="Image/icon1.svg">-->
-    <link rel="shortcut icon" href="Image/IconBig.png"/>
-    <script type="text/javascript" src="assets/js/lib/jQueryMin.js"></script>
-    <link rel="stylesheet" href="assets/css/todos.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Junayed Rahaman - Web developer & Designer</title>
+  <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+  <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
-<body>
-<div id="container">
-<h1>To-do Lists<i class="fas fa-pencil-alt"></i></h1>
-<input type="text" id="email" maxlength="25" placeholder="Enter to-dos"> 
-<ul>
-    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
-    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
-    <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
-</ul> 
-</div>
-<script type="text/javascript" src="assets/js/todos.js"></script>
+<body id="home">
+  <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top py-2">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="logo/junayed-logo.png" width="160px" alt="logo">
+      </a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a id="nav-link" href="#home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a id="nav-link" href="#about" class="nav-link">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a id="nav-link" href="#skills" class="nav-link">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a id="nav-link" href="#contact" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <script src="scripts/jquery.min.js"></script>
+  <script src="scripts/popper.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/navbar-fixed.js"></script>
 </body>
 </html>
