--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#2d2d2d">
+  <meta name="author" content="Junayed Rahaman">
   <title>Junayed Rahaman - Web developer & Designer</title>
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 <body id="home">
   <div style="background: url('img/BG 3.jpg')" class="page-holder bg-cover">
@@ -38,6 +38,21 @@
       </div>
     </div>
   </nav>
+<div class="text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="display-4">
+          Hi, I'm Junayed. I design & build websites.
+        </h1>
+        <a href="#" class="btn btn-outline-secondary btn-lg">
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
+ Read More
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.min.js"></script>
