--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable:no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#2d2d2d">
+  <meta name="theme-color" content="#212121">
   <meta name="author" content="Junayed Rahaman">
   <title>Junayed Rahaman - Web developer & Designer</title>
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body id="home">
-  <div style="background: url('img/BG 3.jpg')" class="page-holder bg-cover">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container">
       <a href="index.html" class="navbar-brand">
@@ -38,22 +37,24 @@
       </div>
     </div>
   </nav>
-<div class="text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="display-4">
-          Hi, I'm Junayed. I design & build websites.
-        </h1>
-        <a href="#" class="btn btn-outline-secondary btn-lg">
+  <!-- Page Header -->
+  <header class="masthead" style="background-image: url('img/BG.jfif')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading text-center">
+            <h1>Hi, I'm Junayed. I design & build websites.</h1>
+            <a href="#" class="btn btn-outline-secondary btn-lg">
           <i class="fa fa-arrow-right" aria-hidden="true"></i>
  Read More
         </a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</div>
+  </header>
+
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
