--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <span>JUNAYED RAHAMAN</span>
