--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <ul class="list-inline text-center">
             <li class="list-inline-item">
               <a href="#">
-                <span class="fa-stack fa-lg">
+                <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-whatsapp fa-stack-1x fa-inverse"></i>
                 </span>
@@ -95,7 +95,7 @@
             </li>
             <li class="list-inline-item">
               <a href="mailto:junayedrahaman500@gmail.com">
-                <span class="fa-stack fa-lg">
+                <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
@@ -103,7 +103,7 @@
             </li>
             <li class="list-inline-item">
               <a href="https://github.com/junayedrahaman50">
-                <span class="fa-stack fa-lg">
+                <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                 </span>
